# TTube

./: .gitignore  CHANGELOG.md  CONFIG.md  GETTING_STARTED.md  LICENSE  LYRICS_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md  VERSIONS.md  install.py  install_app.py  pyproject.toml  requirements.txt  run.py  setup.cfg  ttube.py  ttube.sh  ttube.spec  ttube_installer.nsi  ttube_launcher.bat  ttube_stream.py  ttube_youtube.py
ttube_enhanced/: __init__.py  __main__.py  app.py  art.py  downloader.py  itunes.py  playlists.py  server.py  server_erase.py
ttube_enhanced/static/: app.js  index.html  modals.css  modals.html  modals.js  style.css  style_append.css
