[metadata]
name = ttube
version = 0.1.0
author = TTube Contributors
description = Terminal YouTube Audio Streamer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ImperialGoldenWolf/TTube
project_urls =
    Bug Tracker = https://github.com/ImperialGoldenWolf/TTube/issues
    Documentation = https://github.com/ImperialGoldenWolf/TTube/blob/main/README.md
    Source Code = https://github.com/ImperialGoldenWolf/TTube

[options]
packages = find:
python_requires = >=3.10
install_requires =
    yt-dlp>=2025.1.0
    sounddevice>=0.4.7
    imageio-ffmpeg>=0.5.1

[options.extras_require]
dev = 
    pyinstaller>=6.0
    pytest>=7.0
    black>=23.0
    flake8>=6.0

[options.entry_points]
console_scripts =
    ttube = ttube:cli

[options.packages.find]
where = .

[bdist_wheel]
universal = False
